--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,14 @@
         "set": "cpp",
         "sstream": "cpp",
         "stack": "cpp",
-        "any": "cpp"
+        "any": "cpp",
+        "__verbose_abort": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
+        "fstream": "cpp",
+        "list": "cpp",
+        "regex": "cpp",
+        "thread": "cpp",
+        "variant": "cpp"
     }
 }
