--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "cwd": "${file}"
         },
         {
-            "type": "edge",
+            "type": "msedge",
             "request": "launch",
             "name": "Iniciar Edge para localhost",
             "url": "https://localhost:9999",
