Node, Deno servers. Improved scripts. Improved gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,25 @@
 Build/
-Build/**
-Dist/
-Dist/**
 build/
-build/**
+Dist/
 dist/
-dist/**
-compile_commands.json
+Out/
+out/
+logs/
+Logs/
+Temp/
+Tmp/
+temp/
+tmp/
 .cache/
-.cache/**
+.vscode/
+.idea/
+deps/
+node_modules/
+
+compile_commands.json
+*~
+*.bak
+.env
+.DS_Store
+debug.log
+*.code-workspace
