--- a/Docs/.gitignore
+++ b/Docs/.gitignore
@@ -1,6 +1,20 @@
-InsaneEmscripten/**
 Build/
 build/
+Dist/
+dist/
+Out/
+out/
+logs/
+Logs/
+Temp/
+Tmp/
+temp/
+tmp/
+.cache/
+.vscode/
+.idea/
+deps/
+node_modules/
 compile_commands.json
 Server/node_modules/
 Server/package-lock.json
